2007-11-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* tools/genkeysyms.pl: Mention Gtk2::Gdk->keyval_from_name in the
	DESCRIPTION section of Gtk2::Gdk::Keysyms, as suggested by Kevin
	Ryde.

	* xs/GtkTreeModel.xs (POD section DESCRIPTION): Include additional
	information provided by Dave Howorth about the lifetime of
	iterators.

2007-04-15  muppetman

	* xs/GtkIMContext.xs
	* xs/GtkIMContextSimple.xs
	* xs/GtkIMMulticontext.xs
	* t/GtkIMContext.t
	* MANIFEST
	* xs_files-2.0: Bindings for GtkIMContext, GtkIMContextSimple, and
	GtkIMMulticontext, with tests.  gtk_im_context_simple_add_table is
	not bound; it's unclear as to whether it's actually useful, and i
	don't have a way to test it.

2007-10-30  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm (Gtk2::Builder::_do_connect): Don't use the qw//
	operator to qoute a flag value as it seems to cause parse failures
	on some perls.

2007-10-29  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* Makefile.PL
	* NEWS
	* README: Unstable release 1.170.

2007-10-22  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GtkMessageDialog.xs (SYNOPSIS): Add a show_all() call to the
	non-modal dialog example.  (Spotted by Dave Howorth)

2007-10-21  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkIconTheme.t (list_contexts test): Fix test failure.

2007-10-16  Emmanuele Bassi  <ebassi@gnome.org>

	* tools/genkeysyms.pl: Fix the SYNOPSIS example (from Debian
	bug #422223).

2007-10-14  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Makefile.PL: Use BEGIN { require 5.008; } instead of use 5.008;
	so automatic CPAN testers know which perl version we need.

2007-10-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkPaned.t: Use SKIP instead of TODO for the unreliable resize
	verification tests.  TODOs that pass look like failures.

2007-10-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GdkDnd.t: Handle get_selection() returning undef.

	* Makefile.PL: Tell EU::MM to put correct configure_requires and